# directory-tree-rs

./: Cargo.toml  README.md
src/: args.rs  main.rs  scan_dir.rs  scanner.rs  validator.rs
